--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/********** Template CSS **********/
+********* Template CSS *********
 :root {
     --primary: #06BBCC;
     --light: #F0FBFC;
@@ -89,7 +89,7 @@
 .navbar-light .navbar-nav .nav-link {
     margin-right: 30px;
     padding: 25px 0;
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 15px;
     text-transform: uppercase;
     outline: none;
@@ -107,7 +107,7 @@
     }
 
     .navbar-light .navbar-nav {
-        border-top: 1px solid #EEEEEE;
+        border-top: 1px solid #ffffff;
     }
 }
 
